2000-07-06  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (_AC_SHELL_DIRNAME): New macro.
	(_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS, _AC_OUTPUT_LINKS):
	Use _AC_SHELL_DIRNAME.

2000-07-04 Martin Wilck <martin@tropos.de>

	* aclang.m4 (AC_PROG_F77): Add two compilers,
	lf95 (Lahey/Fujitsu Fortran) and pgf77 (Portland Group Fortran)
	(_AC_PROG_F77_G): Some Fortran compilers produce stdout/stderr
	output even if no errors occur - check exit status rather than
	output.

2000-07-05  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_SHELL_TMPDIR): When using `mktemp -d', be sure
	that the directory was created: under Ultrix 4.3 it just returns
	a name, but does not create the directory.
	Reported by Christian Krackowizer.

2000-07-03  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (AC_SHELL_MKDIR_P): New macro.
	(_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS, _AC_OUTPUT_LINKS,
	AC_PROG_INSTALL): Use AC_SHELL_MKDIR_P.
	* tests/base.m4 (AC_SHELL_MKDIR_P): Test it.

2000-07-04  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_CACHE_LOAD): Be ready to read the cache even
	when `.' is not in the PATH.
	* doc/install.texi (configure Invocation): Adjust.

2000-06-30  Jim Meyering  <meyering@lucent.com>

	* acgeneral.m4 (AC_REQUIRE): Tweak a diagnostic.

2000-06-30  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	Re-enable the old behavior of --host and --build.

	* acgeneral.m4 (build_alias): Set to host_alias if --build is not
	given but --host is, and enable cross-compile auto-detection.  If
	both are, and are different, enable cross compilation.
	(AC_CANONICAL_HOST): Adjust help message.
	(cross_compiling): Enclose in quotes when testing.
	* aclang.m4 (_AC_LANG_COMPILER_WORKS): If cross_compiling is
	maybe, set it to yes or no depending on the result of the
	execution test.
	* doc/autoconf.texi: Document the change.
	* doc/install.texi: Likewise.

2000-06-27  Jim Meyering  <meyering@lucent.com>

	* acspecific.m4 (_AC_LIBOBJ_GETLOADAVG): Put quotes around use of