@@ -774,11 +774,10 @@ done; }
 
 # _AC_SHELL_DIRNAME(PATHNAME)
 # ---------------------------
-# Remove last slash and trailing text.
-# Not all systems have dirname, so we emulate it with sed.
+# Simulate running `dirname(1)' on PATHNAME, not all systems have it.
 # This macro must be usable from inside ` `.
 define([_AC_SHELL_DIRNAME],
-[echo $1 | sed 's%/[[^/][^/]]*$%%'])
+[echo $1 | sed '/^\/*$/!s,//*$,,;s,[^/]*$,,;s,//*$,/,;/^\/$/!s,/$,,'])
 
 
 
