@@ -1,3 +1,9 @@
+2000-07-06  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* acgeneral.m4 (_AC_SHELL_DIRNAME): Behave properly when the
+	argument is a dir with trailing slashes, and when its depth is
+	just one (`/tmp').
+
 2000-07-06  Lars J. Aas  <larsa@sim.no>
 
 	* acgeneral.m4 (_AC_SHELL_DIRNAME): New macro.
